class Category < ApplicationRecord
  validates_presence_of :slug
end
